test/should_fail/map_type_error.erl
-module(map_type_error).

-export([nomap/0]).

-spec nomap() -> integer().
nomap() -> #{fruit => banana}.
